@startuml
class Inventory {
  - _storeName: int
  - _selectItem: int
  + chooseStoreName(num: int): void
  + chooseItem(num: int): void
  + getStoreName(): int
  + getSelectItem(): int
}

class InventoryScreen {
  - inventory: Inventory
  + InventoryScreen(key: Key?)
  + build(context: BuildContext): Widget
}

class InventoryGrid {
  - buttonColor: Color
  - inventory: Inventory
  + InventoryGrid(buttonColor: Color, inventory: Inventory)
  + build(context: BuildContext): Widget
}

class InventoryButton {
  - index: int
  - buttonColor: Color
  - inventory: Inventory
  + InventoryButton(index: int, buttonColor: Color, inventory: Inventory)
  + build(context: BuildContext): Widget
}

InventoryScreen --|> StatelessWidget
InventoryScreen --> Inventory
InventoryGrid --|> StatelessWidget
InventoryGrid --> Inventory
InventoryButton --|> StatelessWidget
InventoryButton --> Inventory
@enduml
